--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -1,3 +1,5 @@
+$primary-color: #bc0031;
+
 .navbar-spacing {
     height: 2em;
 }
@@ -5,4 +7,28 @@
 .bg-light {
     background-color: #FFF;
     border-bottom: 1px solid rgba(#000, 0.7);
+}
+
+.form-control {
+    border-radius: 0;
+}
+
+.btn {
+    border-radius: 0;
+}
+
+.btn-primary {
+    background-color: $primary-color;
+    border-color: $primary-color;
+}
+
+.btn-primary:focus,
+.btn-primary:hover {
+    background-color: darken($primary-color, 5%);
+    border-color: darken($primary-color, 5%);
+}
+
+.btn-primary:not(:disabled):not(.disabled):active {
+    background-color: darken($primary-color, 7%);
+    border-color: darken($primary-color, 7%);
 }
