--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -1,5 +1,3 @@
-$primary-color: #bc0031;
-
 .navbar-spacing {
     height: 2em;
 }
@@ -18,17 +16,17 @@ $primary-color: #bc0031;
 }
 
 .btn-primary {
-    background-color: $primary-color;
-    border-color: $primary-color;
+    background-color: $default-red;
+    border-color: $default-red;
 }
 
 .btn-primary:focus,
 .btn-primary:hover {
-    background-color: darken($primary-color, 5%);
-    border-color: darken($primary-color, 5%);
+    background-color: darken($default-red, 5%);
+    border-color: darken($default-red, 5%);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active {
-    background-color: darken($primary-color, 7%);
-    border-color: darken($primary-color, 7%);
+    background-color: darken($default-red, 7%);
+    border-color: darken($default-red, 7%);
 }
