--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -105,6 +105,10 @@ a.list-ticket:hover, a.list-ticket:focus {
         margin-left: 1em;
         margin-right: 1em;
     }
+
+    .material-card {
+        display: inline-block;
+    }
 }
 
 .reply-area {
