--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -48,6 +48,23 @@ h1 {
     border-radius: 0;
 }
 
+.form-control-title {
+    width: 100%;
+    background: transparent;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    display: block;
+    margin-top: 20px;
+    border-radius: 0;
+    font-size: 2em;
+    padding: 5px;
+    color: #495057;
+    border-bottom: 1px solid #ced4da;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+}
+
 .btn {
     border-radius: 0;
 }
