--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -60,6 +60,9 @@ h1 {
     border-color: darken($default-red, 7%);
 }
 
+.close-button{
+    float: right;
+}
 .list-ticket {
     padding: 18px 24px;
     background: #FFF;
