--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -116,6 +116,17 @@ h1 {
     border-color: darken($text-color-lighter, 7%);
 }
 
+.btn-close-note {
+    float: right;
+    padding-right: 0px;
+    padding-top: 0px;
+    background-color: white;
+    opacity: 0.4;
+}
+.btn-close-note:hover {
+    opacity: 1;
+}
+
 
 .list-ticket {
     padding: 18px 24px;
