alpha TA interface

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -138,6 +138,15 @@ h1 {
     transition: transform 0.1s ease-in-out;
 }
 
+.list-ticket-ta {
+    padding: 18px 24px;
+    background: #FFF;
+    box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
+    margin-bottom: 1em;
+    color: rgba(#000, 0.8);
+    transition: transform 0.1s ease-in-out;
+}
+
 .material-card {
     background: #FFF;
     padding: 18px 24px;
