--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -16,7 +16,7 @@ p.def-error-msg {
 }
 
 h1 {
-    margin-left: 1em;
+    // margin-left: 1em;
     text-align: center;
     font-size: 2.5em;
     opacity: 0.7;
