--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -46,6 +46,89 @@ h1 {
     color: white;
 }
 
+.home-left {
+    margin-left: 35vh;
+}
+
+.home-right {
+    margin-right: 25vh
+}
+
+.scroll-button {
+    font-size: 18px;
+    padding: 20px 40px;
+    background-color: #bc0031;
+    border-color: #bc0031;
+    color: white;
+    display: inline-block;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    position: relative;
+    text-decoration: none;
+    // transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
+
+    cursor: pointer;
+
+
+    &:hover {
+        background: lighten(#bc0031, 5%);
+        border-color: lighten(#bc0031, 5%);
+        color: #fff;
+    }
+}
+
+.btn-arrow {
+  position: relative;
+    transition: background-color 300ms ease-out;
+  span {
+    display: inline-block;
+    position: relative;
+    transition: all 300ms ease-out;
+    will-change: transform;
+  }
+  &:hover span {
+    transform: translate3d(0, -2.1rem, 0);
+    color: transparent;
+  }
+  svg {
+    position: absolute;
+    width: 1.5em;
+    right: 42%;
+    opacity: 0;
+    top: 100%;
+
+    transition: all 300ms ease-out;
+    will-change: top, opacity;
+    * {
+      stroke-width: 5;
+      stroke-color: transparent;
+    }
+  }
+  &:hover svg {
+    opacity: 1;
+    right: 42%;
+    top: 2em;
+  }
+}
+
+.middle-display {
+    display: flex;
+    justify-content: center;
+    padding-top: 75px;
+    padding-bottom: 50px;
+}
+
+.subheading-middle {
+    display: flex;
+    justify-content: center;
+}
+
+
 .form-control {
     border-radius: 0;
 }
