--- a/app/frontend/src/assets/scss/_colors.scss
+++ b/app/frontend/src/assets/scss/_colors.scss
@@ -1,5 +1,5 @@
 $default-red: #bc0031;
-$default-red-hover: #ff8080;
+$default-red-hover: #ad0d0d;
 $default-blue: #1d6adb;
 $default-blue-hover: #0099ff;
 $default-green: #00ac18;
@@ -8,4 +8,3 @@ $text-color-def: #545454;
 $text-color-dark: #101036;
 $text-color-lighter: #686876;
 $text-color-lightest: #9a9aaa;
-
