--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -129,20 +129,43 @@ h1 {
 
 .first-background-image {
     background-image: url("../low-poly-texture.png");
+    background-position: center;
+
     min-height: 100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .message-struct-section {
-    background-image: url("../low-poly-texture2.png");
+    div.row {
+        padding: 10px;
+        background-color: rgba(255,255,255,0.7) !important;
+    }
+    h3 {
+        margin-bottom: 30px !important;
+    }
+    background-image: url("../mountains.jpg");
     min-height: 100vh;
+    background-position: center;
     background-size: 100%;
     padding-bottom: 250px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .service-section {
     background-image: url("../low-poly-texture.png");
     min-height: 100vh;
+    background-position: center;
     padding-bottom: 300px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .masthead {
@@ -347,3 +370,39 @@ a.list-ticket:hover, a.list-ticket:focus {
         font-size: 1.5em;
     }
 }
+
+footer {
+    a {
+        color: white !important;
+        opacity: 0.6 !important;
+        margin-left: 10px !important;
+        padding-bottom: 0px;
+        text-shadow: 1px 2px #000 !important;
+        background: transparent;
+        border: 0px!important;
+        vertical-align: bottom;
+
+    }
+}
+footer:hover {
+    a {
+        opacity: 1 !important;
+        border: 0px!important;
+        background: transparent;
+    }
+
+}
+
+hr {
+       padding: 0;
+       margin: 8px auto;
+       height: 0;
+       width: 50%;
+       max-height: 0;
+       font-size: 2px;
+       line-height: 0;
+       clear: both;
+       border: none;
+       border-top: 2px solid #aaaaaa;
+       border-bottom: 1px solid #ffffff;
+    }
