Lower quality poly

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -129,7 +129,7 @@ h1 {
 
 header.masthead {
     text-align: center;
-    background-image: url("../low-poly-texture.jpg");
+    background-image: url("../low-poly-texture.png");
     background-size: 100%;
     background-position: center;
     min-height: 100vh;
