Use logged in user for submitting a ticket and improved style

--- a/app/frontend/src/assets/scss/_colors.scss
+++ b/app/frontend/src/assets/scss/_colors.scss
@@ -9,3 +9,6 @@ $text-color-dark: #101036;
 $text-color-lighter: #686876;
 $text-color-lightest: #9a9aaa;
 
+$light-shadow: 0 2px 17px 0px rgba(0, 0, 0, 0.04);
+$medium-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.12);
+$heavy-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.12);
