--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -26,6 +26,23 @@ h1 {
 .navbar-tiktech {
     box-shadow: 0 15px 35px rgba(50,50,93,.1),0 5px 15px rgba(0,0,0,.07);
     border: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    padding: 0px;
+    height: auto;
+    background-color: #fff;
+    transition: background-color 500ms;
+}
+
+.navbar-tiktech.navbar-transparent {
+    background-color: rgba(0,0,0,0);
+}
+
+nav {
+    height: initial;
 }
 
 .nav-link {
@@ -43,14 +60,6 @@ h1 {
 .nav-link:active, .nav-link:hover {
     background-color: $default-red;
     color: white;
-}
-
-.home-left {
-    margin-left: 35vh;
-}
-
-.home-right {
-    margin-right: 25vh
 }
 
 .scroll-button {
