--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -396,6 +396,9 @@ a.list-ticket:hover, a.list-ticket:focus {
 }
 
 .summary-container {
+
+}
+.summary-container {
   margin: 0px auto;
   position: fixed;
   width: 80%;
@@ -404,8 +407,10 @@ a.list-ticket:hover, a.list-ticket:focus {
   z-index: 1;
   -webkit-transition: opacity 0.1s ease-in-out;
   left: 50%;
+  padding-bottom: 10px;
   margin-left: -40%;
 }
+
 .summary-header{
     h3 {
         font-size: 1.4em;
@@ -479,7 +484,7 @@ a.list-ticket:hover, a.list-ticket:focus {
 }
 
 .summary-content {
-    height: 70%;
+    height: 80%;
     padding: 10px;
   width: 100%;
   overflow: auto;
@@ -499,6 +504,13 @@ a.list-ticket:hover, a.list-ticket:focus {
 .close-sum:hover {
     color: white;
     background-color: $default-red !important;
+}
+
+.noreply-text {
+    font-size: 18px;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .sum {
