--- a/app/frontend/src/assets/scss/_labels.scss
+++ b/app/frontend/src/assets/scss/_labels.scss
@@ -1,13 +1,5 @@
 @import 'colors';
 
-button.labelbutton-left {
-    margin-bottom: 40px;
-    width: 15%;
-    font-size: 1em;
-    border: 1px solid $default-red;
-    color: white;
-    padding: 10px;
-}
 .addLabelWrapper {
     margin-top: 50px;
     height: 42px;
@@ -24,6 +16,7 @@ button.labelbutton-left {
     background: transparent;
     border: 1px solid grey;
     border-right: 0;
+    padding-left: 10px;
 }
 .labelbutton {
     width: 120px;
@@ -55,9 +48,20 @@ button.labelbutton-left {
     border: none;
     background-color: inherit;
     padding: 14px 28px;
-    opacity: 0.4;
+    opacity: 0.8;
+}
+.label-name:focus {
+  outline: 0;
 }
 .label-name:hover {
+    opacity: 0.6;
+}
+.label-name-selected {
+    opacity: 1;
+    color: $default-red;
+}
+.label-name-selected:hover {
+    color: $default-red;
     opacity: 1;
 }
 .removeLabel {
