--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -24,6 +24,17 @@ h1 {
     opacity: 0.7;
 }
 
+.second-background-image {
+    background-image: url(../trianglify.svg);
+    background-size: 100%;
+    background-position: center;
+    min-height: 100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .navbar-tiktech {
     background-color: #FFF;
     box-shadow: $medium-shadow;
