--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -343,6 +343,7 @@ a.list-course:hover, a.list-course:focus {
     color: white !important;
 }
 div.notification-container {
+    background-color: rgba(255,255,255,.5);
     box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
     height: 100%;
     max-height:60vh;
