--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -247,6 +247,34 @@ header.masthead {
 
 }
 
+.breadcrumb {
+    background-color: inherit;
+    list-style: none;
+    display: flex;
+    border: none;
+    background-color: inherit;
+    margin: auto;
+    padding: auto;
+
+    & .breadcrumb-item {
+        border: none;
+        background-color: inherit;
+
+        & > .breadcrumb-link {
+            background-color: inherit;
+            border: none;
+            font-weight: 600;
+            transition: all 0.4s ease;
+            // transition: color 0.5s ease;
+
+            &:hover {
+                background-color: #bc0031;
+                color: whitesmoke;
+            }
+        }
+    }
+}
+
 .btn {
     border-radius: 0;
 }
