--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -35,6 +35,10 @@ h1 {
     background-size: cover;
 }
 
+.navbar {
+    min-height: 68px;
+}
+
 .navbar-tiktech {
     box-shadow: 0 15px 35px rgba(50,50,93,.1),0 5px 15px rgba(0,0,0,.07);
     border: none;
