--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -538,19 +538,12 @@ hr {
 }
 
 .summary-container {
-
-}
-.summary-container {
-  margin: 0px auto;
   position: fixed;
-  width: 80%;
-  height: 40%;
-  bottom: 0%;
-  z-index: 1;
+  //position: relative;
+  width: 25%;
+  height: 100%;
   -webkit-transition: opacity 0.1s ease-in-out;
-  left: 50%;
   padding-bottom: 10px;
-  margin-left: -40%;
 }
 
 .summary-header{
@@ -578,7 +571,7 @@ hr {
   box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
   transition: all .3s ease-out;
   font-family: Helvetica, Arial, sans-serif;
-  height: 100%;
+  height: 90%;
 }
 .summary-tab {
     position: relative;
@@ -607,27 +600,26 @@ hr {
 }
 
 .summary-tab{
-  width: 40%;
+  width: 100%;
   float: left;
 
 }
 .summary-tab-notes{
-  width: 25%;
-  float: left;
+  width: 100%;
+  height: 30%;
 }
 .summary-tab-original {
-    width: 35%;
-    float: left;
+    width: 100%;
+    height: 20%;
 }
 
-.middle {
-    border-left: 1px solid $default-red;
-    border-right: 1px solid $default-red;
+.summary-tab-middle {
+    height: 50%;
 }
 
 .summary-content {
-    height: 80%;
-    padding: 10px;
+  height: 80%;
+  padding: 10px;
   width: 100%;
   overflow: auto;
 }
@@ -655,6 +647,21 @@ hr {
     vertical-align: middle;
 }
 
+.course-main-container {
+
+}
+
+.subbox {
+    float: left;
+    width: 70%;
+    margin-left: -5%;
+    padding-left: -10%;
+}
+.summary-sub-container {
+    float: right;
+    padding-left: 2%;
+    width: 30%;
+}
 .sum {
 
   width: auto;
