home page revamp met behulp van vue material

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -708,12 +708,38 @@ hr {
     min-height: 100vh;
 }
 
-.courseslist {
-    background-color: blue;
-    float: left;
+.welcome-header {
+    padding: 5vh;
+    justify-content: center;
 }
 
-.fixedlocation{
-    position: fixed;
-    float: right;
+.notification-section {
+    max-height: 40vh;
+    overflow: auto;
+}
+
+.courses-section {
+    max-height: 65vh;
+    min-height: 65vh;
+    overflow: auto;
+}
+
+.single-course {
+    color: green!important;
+    background-color: white;
+}
+
+.create-ticket-section1 {
+    margin-top: 5vh;
+}
+
+.create-ticket-section2 {
+    min-height: 20vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.create-ticket-section:hover {
+    cursor: pointer;
 }
