Totale revamp van submit ticket met vue material

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -713,6 +713,15 @@ hr {
     justify-content: center;
 }
 
+.center-display {
+    justify-content: center;
+    text-align: center;
+}
+
+.margin-top {
+    margin-top: 10vh;
+}
+
 .notification-section {
     max-height: 40vh;
     overflow: auto;
