betere alignment in userhome

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -862,9 +862,14 @@ hr {
 
 .create-ticket-section2 {
     min-height: 20vh;
+    max-height: 20vh;
     display:flex;
     align-items: center;
     justify-content: center;
+}
+
+.padding-bottom-0 {
+    padding-bottom: 0px!important;
 }
 
 .float-left {
