Demo plugin support

--- a/app/frontend/src/assets/scss/homescreen.scss
+++ b/app/frontend/src/assets/scss/homescreen.scss
@@ -13,6 +13,7 @@ p {
     font-weight: 500;
 }
 
+/*
 a {
   color: $default-red;
   background-color: #FFF;
@@ -53,6 +54,7 @@ a:hover {
     transition: color 100ms ease-out;
     text-decoration: none;
 }
+*/
 
 .home-left {
     margin-left: 35vh;
