--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -7,6 +7,10 @@ body {
     background-color: darken(#FFF, 2%);
 }
 
+a, a:hover, a:focus {
+    text-decoration: none;
+}
+
 .navbar-spacing {
     height: 6em;
 }
