--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -29,7 +29,7 @@ h1 {
     background-position: center center;
     height: 100vh;
     position: fixed;
-    overflow: scroll;
+    overflow: auto;
     top: 0;
     left: 0;
 }
