Extensies activeren per course

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -793,8 +793,8 @@ hr {
 }
 
 .md-table {
-    min-width: 55em;
-    max-width: 60em;
+    //min-width: 55em;
+    //max-width: 60em;
 }
 
 .tickettable:hover {
