--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -153,6 +153,7 @@ nav {
 
 .file-name-container {
     line-height: 1.1em;
+    width: 80%;
     box-shadow: $medium-shadow;
     font-size: 1.1em;
     border-color: lighten(#bc0031, 5%);
@@ -172,11 +173,17 @@ nav {
     vertical-align: text-bottom;
 }
 
+.file-ocr-button {
+    width: 10%;
+    padding-bottom: 15px !important;
+}
+
 .file-listing-small {
     cursor: pointer;
     margin-bottom: 0px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
     padding-left: 10px;
+    width: 80%;
     color: $text-color-def;
 }
 .file-listing-small:hover {
