Color schemes fix and second demo plugin

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -878,7 +878,6 @@ hr {
 }
 
 .single-course {
-    color: green!important;
     background-color: white;
 }
 
@@ -918,3 +917,13 @@ hr {
     position: fixed;
     float: right;
 }
+
+@import "~vue-material/dist/theme/engine"; // Import the theme engine
+
+@include md-register-theme("default", (
+    primary: $default-red, // The primary color of your brand
+    accent: #00bc8a // The secondary color of your brand
+));
+
+@import "~vue-material/dist/theme/all"; // Apply the theme
+
