--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -2,35 +2,9 @@
 @import '_labels';
 @import '_mentioning';
 @import 'homescreen';
-@import "~vue-material/dist/theme/engine"; // Import the theme engine
-
-@include md-register-theme("default", (
-  primary: darken(#FFF,1%), // The primary color of your application
-  secondary: white, // The accent or secondary color
-  primary-variant: white,
-
-));
-
-@import "~vue-material/dist/theme/all"; // Apply the theme
 
 body {
     background-color: darken(#FFF, 2%);
-}
-
-// Demo fixes need to edit later
-a:hover, a:focus {
-    text-decoration: none !important;
-    background: transparent !important;
-}
-a.button{
-    color: white !important;
-}
-
-a.button:hover{
-    background-color: $default-red !important;
-}
-a.breadcrumb {
-    color: $default-red !important;
 }
 
 .navbar-spacing {
@@ -55,7 +29,7 @@ h1 {
     background-position: center center;
     height: 100vh;
     position: fixed;
-    overflow: auto;
+    overflow: scroll;
     top: 0;
     left: 0;
 }
@@ -99,14 +73,16 @@ nav {
 }
 
 .active, .nav-item:hover {
-    color: $default-red;
+    background-color: $default-red;
+    color: white;
         a{
-            color:$default-red;
+            color:white;
         }
 }
 
 .nav-link:active, .nav-link:hover {
-    color: $default-red;
+    background-color: $default-red;
+    color: white;
 }
 
 
@@ -197,7 +173,7 @@ nav {
     padding-left: 0px;
     width: 95%;
     color: $text-color-lighter;
-    border-top: 1px solid #aaaaaa;
+    font-size: 1px;
     margin: 2px;
 }
 
@@ -332,6 +308,11 @@ header.masthead {
         font-size: 1.4em;
     }
 
+    h7 {
+        font-size: 1.3em;
+        padding-top: 20px !important;
+        font-weight: bold;
+    }
     p {
         font-size: 1.2em;
         color: black !important;
@@ -386,9 +367,7 @@ header.masthead {
     border: none;
     background-color: inherit;
     margin: auto;
-    font-size: 1.5em;
     padding: auto;
-    color: $default-red !important;
 
     & .breadcrumb-item {
         border: none;
@@ -397,13 +376,17 @@ header.masthead {
         & > .breadcrumb-link {
             background-color: inherit;
             border: none;
+            font-size: 1.3em;
             font-weight: 600;
             transition: all 0.4s ease;
-            transition: color 0.5s ease;
-            color: $default-red !important;
+            // transition: color 0.5s ease;
 
             &:hover {
-                color: darken($default-red, 10%);
+                // background-color: #bc0031;
+                // color: whitesmoke;
+                text-decoration: none;
+                border-bottom: 3px solid;
+                border-bottom-color: var(--md-theme-default-accent);
             }
         }
     }
@@ -411,11 +394,6 @@ header.masthead {
 
 .btn {
     border-radius: 0;
-    color: white !important;
-    background-color: $default-red !important;
-}
-.btn:hover{
-    background-color: darken($default-green, 7%);
 }
 
 .btn-submit {
@@ -439,8 +417,30 @@ header.masthead {
     border-color: darken($text-color-lighter, 7%);
 }
 
+.btn-primary {
+    background-color: $default-red;
+    border-color: $default-red;
+}
+
+.btn-primary:focus,
+.btn-primary:hover {
+    background-color: darken($default-red, 5%);
+    border-color: darken($default-red, 5%);
+}
+
+.btn-primary:not(.disabled):active {
+    background-color: darken($default-red, 7%);
+    border-color: darken($default-red, 7%);
+}
+
+
 .close-button{
     float: right;
+}
+
+.middle-button{
+    // width: 10%;
+
 }
 
 .btn-primary:disabled {
@@ -464,6 +464,7 @@ header.masthead {
     overflow-x: hidden !important;
     display: block;
     box-shadow: 0 2px 4px 0 rgba(50,50,93,0.3);
+    color: $default-red;
     transition: transform 0.1s ease-in-out;
 }
 .home-scroll-courses {
@@ -530,6 +531,53 @@ div.homescreen-container {
     box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
 }
 
+.message > .md-card {
+    margin-right: unset;
+}
+
+.md-card {
+    width: 75%;
+    max-width: 75%;
+    overflow-wrap: break-word;
+    
+    & .md-card-content {
+        text-align: left;
+        max-width: inherit;
+        width: fit-content;
+    }
+
+    & .md-card.header {
+        width: fit-content;
+        margin-left: auto;
+    }
+}
+
+.box-centerh {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.full-width {
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+}
+
+div.create-ticket-section2.md-card-content {
+    vertical-align: middle;
+    width: 100%;
+
+    & > p {
+        text-align: center;
+        line-height: 1em;
+        font-size: 2em;
+        letter-spacing: 0px;
+        font-weight: 600;
+        margin: 0;
+        padding: 0;
+    }
+}
+
 a.list-ticket {
     text-decoration: none;
 }
@@ -548,11 +596,17 @@ a.list-ticket:hover, a.list-ticket:focus {
     padding: 1em;
 }
 
-.message {
-    margin-top: 1em;
+.message-right {
+    text-align: right;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .message {
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+
     h4 {
         color: $default-red;
         font-size: 1rem;
@@ -586,6 +640,17 @@ a.list-ticket:hover, a.list-ticket:focus {
 
 .note-add-button {
     margin: 15px 10px;
+}
+
+.create-button {
+    margin-bottom: 40px;
+    width: 20%;
+    background-color: $default-red;
+    position: absolute;
+    bottom: 0;
+}
+.create-button:hover {
+    background-color: darken($default-red, 7%);
 }
 
 .dropdown-button {
@@ -629,14 +694,24 @@ a.list-ticket:hover, a.list-ticket:focus {
     }
 }
 
+hr {
+    border-color: $default-red;
+}
+
 .summary-container {
+
+}
+.summary-container {
+  margin: 0px auto;
   position: fixed;
-  //position: relative;
-  width: 25%;
-  height: 100%;
-  top: 12%;
+  width: 80%;
+  height: 40%;
+  bottom: 0%;
+  z-index: 1;
   -webkit-transition: opacity 0.1s ease-in-out;
+  left: 50%;
   padding-bottom: 10px;
+  margin-left: -40%;
 }
 
 .summary-header{
@@ -664,7 +739,7 @@ a.list-ticket:hover, a.list-ticket:focus {
   box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
   transition: all .3s ease-out;
   font-family: Helvetica, Arial, sans-serif;
-  height: 85%;
+  height: 100%;
 }
 .summary-tab {
     position: relative;
@@ -693,26 +768,27 @@ a.list-ticket:hover, a.list-ticket:focus {
 }
 
 .summary-tab{
-  width: 100%;
+  width: 40%;
   float: left;
 
 }
 .summary-tab-notes{
-  width: 100%;
-  height: 30%;
+  width: 25%;
+  float: left;
 }
 .summary-tab-original {
-    width: 100%;
-    height: 20%;
+    width: 35%;
+    float: left;
 }
 
-.summary-tab-middle {
-    height: 50%;
+.middle {
+    border-left: 1px solid $default-red;
+    border-right: 1px solid $default-red;
 }
 
 .summary-content {
-  height: 80%;
-  padding: 10px;
+    height: 80%;
+    padding: 10px;
   width: 100%;
   overflow: auto;
 }
@@ -740,60 +816,18 @@ a.list-ticket:hover, a.list-ticket:focus {
     vertical-align: middle;
 }
 
-.course-main-container {
-
-}
-
-.subbox {
-    float: left;
-    width: 70%;
-    margin-left: -5%;
-    padding-left: -10%;
-}
-.summary-sub-container {
-    float: right;
-    top: 10%;
-    padding-left: 1%;
-    width: 30%;
-}
 .sum {
 
   width: auto;
   word-wrap: break-word;
 }
 
-.white {
-        background-color: #F2F2F2
-}
-
-.red {
-    background-color: $default-red;
-    color: white;
-}
 .sum-original {
 
   padding: 10px;
   word-wrap: break-word;
 }
 
-.md-table {
-    min-width: 55em;
-    max-width: 60em;
-}
-
-.tickettable:hover {
-    background-color: lightgrey !important;
-    color: black !important;
-    cursor: pointer;
-}
-
-.md-input {
-    color: white;
-}
-.activated {
-    background-color: lightgrey !important;
-    color: black !important;
-}
 footer {
     a {
         color: white !important;
@@ -830,6 +864,19 @@ hr {
    border-bottom: 1px solid #ffffff;
 }
 
+.dashboard-button {
+    background: #FFF;
+    //display: block;
+    box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
+    margin-bottom: 1em;
+    margin-right: 1em;
+    margin-left: 1em;
+    color: $default-red;
+    transition: transform 0.1s ease-in-out;
+    height: 180px;
+    width: 180px;
+}
+
 .wrapper {
     min-height: 100vh;
 }
@@ -842,7 +889,6 @@ hr {
 .center-display {
     justify-content: center;
     text-align: center;
-    text-indent: 0px;
 }
 
 .margin-top {
@@ -850,25 +896,9 @@ hr {
 }
 
 .notification-section {
-    min-height: 50vh;
-    max-height: 50vh;
+    min-height: 40vh;
+    max-height: 40vh;
     overflow: auto;
-}
-
-.ticket-single {
-    color: $text-color-def !important;
-    padding: 5px;
-    margin-right: 7px;
-    margin-left: 7px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 1em;
-    border-color: darken($text-color-def, 5%);
-    border: 1px solid;
-}
-
-.ticket-single:hover {
-    opacity: 0.7;
 }
 
 .courses-section {
@@ -883,31 +913,19 @@ hr {
 }
 
 .create-ticket-section1 {
+    margin: auto;
+    // margin-top: 5vh;
     margin-top: 2vh;
+    bottom: 0;
+    width: 100%;
+    max-width: 100%;
 }
 
 .create-ticket-section2 {
-    min-height: 13vh;
-    max-height: 13vh;
+    min-height: 20vh;
     display:flex;
     align-items: center;
     justify-content: center;
-}
-
-.padding-bottom-0 {
-    padding-bottom: 0px!important;
-}
-
-.float-left {
-    float: left;
-}
-
-.padding-left-10 {
-    padding-left: 10px;
-}
-
-.material-icons:hover {
-    cursor: pointer;
 }
 
 .create-ticket-section:hover {
