final touches coursetickets

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -674,6 +674,7 @@ a.list-ticket:hover, a.list-ticket:focus {
   //position: relative;
   width: 25%;
   height: 100%;
+  right: 0;
   top: 12%;
   -webkit-transition: opacity 0.1s ease-in-out;
   padding-bottom: 10px;
@@ -734,7 +735,7 @@ a.list-ticket:hover, a.list-ticket:focus {
 
 .summary-tab{
   width: 100%;
-  float: left;
+  // float: left;
 
 }
 .summary-tab-notes{
@@ -781,10 +782,8 @@ a.list-ticket:hover, a.list-ticket:focus {
 }
 
 .subbox {
-    float: left;
-    width: 70%;
-    margin-left: -5%;
-    padding-left: -10%;
+    width: 100%;
+    word-wrap: break-word;
 }
 .summary-sub-container {
     float: right;
@@ -793,7 +792,6 @@ a.list-ticket:hover, a.list-ticket:focus {
     width: 30%;
 }
 .sum {
-
   width: auto;
   word-wrap: break-word;
 }
@@ -813,8 +811,8 @@ a.list-ticket:hover, a.list-ticket:focus {
 }
 
 .md-table {
-    min-width: 55em;
-    max-width: 60em;
+    min-width: 60em;
+    max-width: 65em;
 }
 
 .tickettable:hover {
@@ -1008,4 +1006,18 @@ hr {
   text-shadow: none;
   background-color: transparent;
   border: 0;
+}
+
+.md-table .md-table-cell.md-has-action .md-table-cell-container {
+  justify-content: space-around;
+}
+.md-table .md-table-head {
+  text-align: center;
+}
+.md-table .md-table-cell {
+  text-align: center;
+}
+
+.md-table-cell:last-child {
+    padding-right: 0;
 }
