fixed rank not showing issue and speed dial color and return on invalid student ticket

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -37,6 +37,10 @@ a.breadcrumb {
     height: 6em;
 }
 
+.important-red {
+    background-color: $default-red !important;
+    color: white !important;
+}
 p.def-error-msg {
     margin-top: 0.5em;
     opacity:0.9;
